--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,1 +1,16 @@
-<ap-photos [photos]="photos"></ap-photos>
+<div class="text-center mt-3 mb-3">
+    <form>
+        <label>
+            <input
+                class="rounded"
+                type="search"
+                placeholder="search..."
+                autofocus
+                (keyup)="debounce.next($event.target.value)"
+            >
+        </label>
+    </form>
+</div>
+
+<ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
+
