implemented the load in batches using the pagination and added a load more button

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -14,3 +14,8 @@
 
 <ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
 
+<ap-load-button
+    (click)="load()"
+    [hasMore]="hasMore"
+></ap-load-button>
+
