added font awesome into the project

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,6 +1,7 @@
 <div class="text-center mt-3 mb-3">
     <form>
         <label>
+            <i aria-hidden="true" class="fa fa-search mr-2"></i>
             <input
                 class="rounded"
                 type="search"
