--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -5,7 +5,15 @@
 <ol class="list-unstyled">
     <li *ngFor="let cols of rows" class="row no-gutters">
         <div *ngFor="let photo of cols" class="col-4">
-            <ap-photo [description]="photo.description" [url]="photo.url"></ap-photo>
+            <ap-card>
+                <ap-photo [description]="photo.description" [url]="photo.url"></ap-photo>
+
+                <div class="text-center p-1">
+                    <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2"></i> {{photo.likes}}
+                    <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-4"></i> {{photo.comments}}
+                </div>
+
+            </ap-card>
         </div>
     </li>
 </ol>
