--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -4,7 +4,7 @@
 
 <ol class="list-unstyled">
     <li *ngFor="let cols of rows" class="row no-gutters">
-        <div *ngFor="let photo of cols" class="col-4">
+        <div *ngFor="let photo of cols" class="col-4" apDarkenOnHover>
             <ap-card>
                 <ap-photo [description]="photo.description" [url]="photo.url"></ap-photo>
 
