--- a/src/app/home/sign-in/sign-in.component.html
+++ b/src/app/home/sign-in/sign-in.component.html
@@ -1,21 +1,38 @@
-<h4 class="text-center">Login</h4>
+<div class="container">
+    <h4 class="text-center">Login</h4>
 
-<form class="form mt-4">
-    <div class="form-group">
-        <label>Username:
-            <input class="form-control" placeholder="user name" autofocus>
-        </label>
-    </div>
+    <form [formGroup]="loginForm" class="form mt-4" (submit)="login()">
+        <div class="form-group">
+            <label>
+                <input #usernameInput
+                    formControlName="username"
+                    class="form-control"
+                    placeholder="username"
+                    autofocus>
+            </label>
+            <ap-vmessage
+                *ngIf="loginForm.get('username').errors?.required"
+                text="Username is required">
+            </ap-vmessage>
+        </div>
 
-    <div class="form-group">
-        <label>Password:
-            <input type="password" class="form-control" placeholder="password">
-        </label>
-    </div>
+        <div class="form-group">
+            <label>
+                <input
+                    formControlName="password"
+                    type="password"
+                    class="form-control"
+                    placeholder="password">
+            </label>
+            <ap-vmessage
+                *ngIf="loginForm.get('password').errors?.required"
+                text="Password is required">
+            </ap-vmessage>
+        </div>
 
+        <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">login</button>
 
-    <button type="submit" class="btn btn-primary btn-block">login</button>
+    </form>
 
-</form>
-
-<p>Not a user? <a>Register now</a></p>
+    <p>Not a user? <a>Register now</a></p>
+</div>
