--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-light bg-white">
         <a class="navbar-brand">ALURAPIC</a>
 
-        <div *ngIf="user; else login">
+        <div *ngIf="(user$ | async) as user; else login">
             <i class="fa fa-user-circle"></i>
             <a class="ml-2">{{user.name}}</a>
         </div>
