--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,8 +3,9 @@
         <a class="navbar-brand">ALURAPIC</a>
 
         <div *ngIf="(user$ | async) as user; else login">
-            <i class="fa fa-user-circle"></i>
+            <i class="fa fa-user-circle mr-1"></i>
             <a class="ml-2">{{user.name}}</a>
+            <a (click)="logout()">(Logout)</a>
         </div>
 
         <ng-template #login>
