heading the user user to the login page when clicking on the login button

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
         </div>
 
         <ng-template #login>
-            <span class="navbar-text">Please, sign in!</span>
+            <span class="navbar-text"><a [routerLink]="['']">Please, sign in!</a></span>
         </ng-template>
     </nav>
 </header>
