implemented a async validator to check if the user already exits in the database

--- a/src/app/home/sign-in/sign-in.component.html
+++ b/src/app/home/sign-in/sign-in.component.html
@@ -34,5 +34,5 @@
 
     </form>
 
-    <p>Not a user? <a>Register now</a></p>
+    <p>Not a user? <a routerLink="signup">Register now</a></p>
 </div>
