--- a/src/app/home/sing-up/sing-up.component.html
+++ b/src/app/home/sing-up/sing-up.component.html
@@ -34,12 +34,18 @@
             </ap-vmessage>
             <ap-vmessage
                 *ngIf="signupForm.get('userName').errors?.lowerCase"
-                text="User name must a contains only lower case letters, numbers, underscore(_), and dash (-)">
+                text="User name must contains only lower case letters, numbers, underscore(_), and dash (-)">
             </ap-vmessage>
             <ap-vmessage
                 *ngIf="signupForm.get('userName').errors?.minlength || signupForm.get('userName').errors?.maxlength"
                 text="User name must have between {{this.USER_NAME_MIN_LENGTH}} and {{this.USER_NAME_MAX_LENGTH}} characters">
             </ap-vmessage>
+            <ap-vmessage
+                *ngIf="signupForm.get('userName').errors?.userNameTaken"
+                text="User name already taken">
+            </ap-vmessage>
+            <small *ngIf="signupForm.get('userName').valid" class="text-success">User available</small>
+
         </div>
 
         <div class="form-group">
@@ -54,7 +60,8 @@
             </ap-vmessage>
         </div>
 
-        <button class="btn btn-primary btn-block">Register</button>
+        <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register
+        </button>
 
         <p>Already a user?<a [routerLink]="['']">Sign In!</a></p>
     </form>
