--- a/src/app/home/sing-up/sing-up.component.html
+++ b/src/app/home/sing-up/sing-up.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h4 class="text-center"> Register to embrace a new world!</h4>
 
-    <form class="form mt-4" [formGroup]="signupForm">
+    <form class="form mt-4" [formGroup]="signupForm" (submit)="signup()">
         <div class="form-group">
             <input formControlName="email" placeholder="email" class="form-control" autofocus>
             <ap-vmessage
