--- a/src/app/home/sing-up/sing-up.component.html
+++ b/src/app/home/sing-up/sing-up.component.html
@@ -1,68 +1,66 @@
-<div class="container">
-    <h4 class="text-center"> Register to embrace a new world!</h4>
+<h4 class="text-center"> Register to embrace a new world!</h4>
 
-    <form class="form mt-4" [formGroup]="signupForm" (submit)="signup()">
-        <div class="form-group">
-            <input formControlName="email" placeholder="email" class="form-control" autofocus>
-            <ap-vmessage
-                *ngIf="signupForm.get('email').errors?.required"
-                text="Email is required">
-            </ap-vmessage>
-            <ap-vmessage
-                *ngIf="signupForm.get('email').errors?.email"
-                text="Invalid email">
-            </ap-vmessage>
-        </div>
+<form class="form mt-4" [formGroup]="signupForm" (submit)="signup()">
+    <div class="form-group">
+        <input #emailInput formControlName="email" placeholder="email" class="form-control" autofocus>
+        <ap-vmessage
+            *ngIf="signupForm.get('email').errors?.required"
+            text="Email is required">
+        </ap-vmessage>
+        <ap-vmessage
+            *ngIf="signupForm.get('email').errors?.email"
+            text="Invalid email">
+        </ap-vmessage>
+    </div>
 
-        <div class="form-group">
-            <input formControlName="fullName" placeholder="full name" class="form-control">
-            <ap-vmessage
-                *ngIf="signupForm.get('fullName').errors?.required"
-                text="Full name is required">
-            </ap-vmessage>
-            <ap-vmessage
-                *ngIf="signupForm.get('fullName').errors?.minlength || signupForm.get('fullName').errors?.maxlength"
-                text="Full name must have between {{this.FULL_NAME_MIN_LENGTH}} and {{this.FULL_NAME_MAX_LENGTH}} characters">
-            </ap-vmessage>
-        </div>
+    <div class="form-group">
+        <input formControlName="fullName" placeholder="full name" class="form-control">
+        <ap-vmessage
+            *ngIf="signupForm.get('fullName').errors?.required"
+            text="Full name is required">
+        </ap-vmessage>
+        <ap-vmessage
+            *ngIf="signupForm.get('fullName').errors?.minlength || signupForm.get('fullName').errors?.maxlength"
+            text="Full name must have between {{this.FULL_NAME_MIN_LENGTH}} and {{this.FULL_NAME_MAX_LENGTH}} characters">
+        </ap-vmessage>
+    </div>
 
-        <div class="form-group">
-            <input formControlName="userName" placeholder="user name" class="form-control">
-            <ap-vmessage
-                *ngIf="signupForm.get('userName').errors?.required"
-                text="User name is required">
-            </ap-vmessage>
-            <ap-vmessage
-                *ngIf="signupForm.get('userName').errors?.lowerCase"
-                text="User name must contains only lower case letters, numbers, underscore(_), and dash (-)">
-            </ap-vmessage>
-            <ap-vmessage
-                *ngIf="signupForm.get('userName').errors?.minlength || signupForm.get('userName').errors?.maxlength"
-                text="User name must have between {{this.USER_NAME_MIN_LENGTH}} and {{this.USER_NAME_MAX_LENGTH}} characters">
-            </ap-vmessage>
-            <ap-vmessage
-                *ngIf="signupForm.get('userName').errors?.userNameTaken"
-                text="User name already taken">
-            </ap-vmessage>
-            <small *ngIf="signupForm.get('userName').valid" class="text-success">User available</small>
+    <div class="form-group">
+        <input formControlName="userName" placeholder="user name" class="form-control">
+        <ap-vmessage
+            *ngIf="signupForm.get('userName').errors?.required"
+            text="User name is required">
+        </ap-vmessage>
+        <ap-vmessage
+            *ngIf="signupForm.get('userName').errors?.lowerCase"
+            text="User name must contains only lower case letters, numbers, underscore(_), and dash (-)">
+        </ap-vmessage>
+        <ap-vmessage
+            *ngIf="signupForm.get('userName').errors?.minlength || signupForm.get('userName').errors?.maxlength"
+            text="User name must have between {{this.USER_NAME_MIN_LENGTH}} and {{this.USER_NAME_MAX_LENGTH}} characters">
+        </ap-vmessage>
+        <ap-vmessage
+            *ngIf="signupForm.get('userName').errors?.userNameTaken"
+            text="User name already taken">
+        </ap-vmessage>
+        <small *ngIf="signupForm.get('userName').valid" class="text-success">User available</small>
 
-        </div>
+    </div>
 
-        <div class="form-group">
-            <input formControlName="password" type="password" placeholder="password" class="form-control">
-            <ap-vmessage
-                *ngIf="signupForm.get('password').errors?.required"
-                text="Password name is required">
-            </ap-vmessage>
-            <ap-vmessage
-                *ngIf="signupForm.get('password').errors?.minlength || signupForm.get('password').errors?.maxlength"
-                text="Password name must have between {{this.PASSWORD_MIN_LENGTH}} and {{this.PASSWORD_MAX_LENGTH}} characters">
-            </ap-vmessage>
-        </div>
+    <div class="form-group">
+        <input formControlName="password" type="password" placeholder="password" class="form-control">
+        <ap-vmessage
+            *ngIf="signupForm.get('password').errors?.required"
+            text="Password name is required">
+        </ap-vmessage>
+        <ap-vmessage
+            *ngIf="signupForm.get('password').errors?.minlength || signupForm.get('password').errors?.maxlength"
+            text="Password name must have between {{this.PASSWORD_MIN_LENGTH}} and {{this.PASSWORD_MAX_LENGTH}} characters">
+        </ap-vmessage>
+    </div>
 
-        <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register
-        </button>
+    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register
+    </button>
 
-        <p>Already a user?<a [routerLink]="['']">Sign In!</a></p>
-    </form>
-</div>
+    <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
+</form>
